--- a/tigacrafting/templates/tigacrafting/geo_report_assign.html
+++ b/tigacrafting/templates/tigacrafting/geo_report_assign.html
@@ -117,7 +117,7 @@
     </div>
 
     <div id="dialog-confirm" title="Grab reports?">
-        <p><span class="ui-icon ui-icon-alert" style="float:left; margin:12px 12px 20px 0;"></span><span id="dialog_message">These items will be permanently deleted and cannot be recovered. Are you sure?</span></p>
+        <p><span class="ui-icon ui-icon-alert" style="float:left; margin:12px 12px 20px 0;"></span><span id="dialog_message">About to assign reports from selected country. Are you sure?</span></p>
         <p id="loading_progress" style="display:none;"><i class="fa fa-spinner fa-spin fa-3x fa-fw" aria-hidden="true"></i>Getting reports...</p>
     </div>
 
