--- a/tigacrafting/templates/tigacrafting/photo_grid.html
+++ b/tigacrafting/templates/tigacrafting/photo_grid.html
@@ -17,6 +17,7 @@
         .sure_albopictus {background-color: lightgray; margin-bottom: 0px; height: 30px; text-align: right; padding-right: 10px;}
         .not_sure {background-color: lightgray; margin-bottom: 0px; height: 30px; text-align: right; padding-right: 10px;}
         .ia_val {background-color: lightgray; margin-bottom: 0px; height: 30px; text-align: right; padding-right: 10px;}
+        .ia_graph {background-color: lightgray; margin-bottom: 0px; height: 30px; text-align: right; padding-right: 10px;}
 
         .grid { /*border-style:solid; border-width: 1px;*/ background-color: lightgray; margin-top: 10px;}
         .frame {position: absolute;margin: auto;top: 0;left: 0;right: 0;bottom: 0;}
@@ -39,6 +40,8 @@
     <script src="{% static 'tigacrafting/bootstrap-3.2.0-dist/js/bootstrap.min.js' %}"></script>
     <script src="{% static 'tigacrafting/bootstrap-select/js/bootstrap-select.min.js' %}"></script>
     <script src="https://unpkg.com/isotope-layout@3.0/dist/isotope.pkgd.min.js"></script>
+    <script src="{% static 'tigacrafting/d3/d3.min.js' %}"></script>
+    <script src="{% static 'tigacrafting/ia_graph.js' %}"></script>
 </head>
 <body>
 
@@ -174,7 +177,7 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="slider" class="col-sm-4 control-label">Show only report adults with ia greater or equal than:</label>
+                            <label for="slider" class="col-sm-4 control-label">Show only report adults with ia index less or equal than:</label>
                             <div class="col-sm-8">
                                 <div id="slider"></div>
                                 <div id="slider_value">0.75</div>
@@ -290,7 +293,8 @@
             </div>
             <div data-id="{{ form.instance.version_UUID }}" class="ia_val {{form.instance.type}}" style="">
                 <label><b>IA Value: {{ form.instance.ia_filter_1|floatformat:4 }}</b></label>
-                <div style="height:20px;width:{% widthratio form.instance.ia_filter_1 1 100 %}px;background-color:red;"></div>
+            </div>
+            <div id="ia{{ form.instance.version_UUID }}" data-ia-value="{{ form.instance.ia_filter_1 }}" data-id="{{ form.instance.version_UUID }}" class="ia_graph {{form.instance.type}}" style="">
             </div>
         {% endif %}
 
