Extended report outline

--- a/tigacrafting/templates/tigacrafting/expert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_annotation.html
@@ -67,6 +67,10 @@
             color: black;
         }
 
+        .long {
+            border: 2px solid red;
+        }
+
     </style>
 
     {% block fa_css %}
