Renamed culex occurrences

--- a/tigacrafting/templates/tigacrafting/predefined_messages.html
+++ b/tigacrafting/templates/tigacrafting/predefined_messages.html
@@ -80,7 +80,7 @@
                   <option value="aegypti">Aedes aegypti</option>
                   <option value="japonicus">Aedes japonicus</option>
                   <option value="koreicus">Aedes koreicus</option>
-                  <option value="culex">Culex sp.</option>
+                  <option value="culex">Culex pipiens</option>
               </select>
           </div>
       </div>
