--- a/tigacrafting/templates/tigacrafting/survey/survey_ca.html
+++ b/tigacrafting/templates/tigacrafting/survey/survey_ca.html
@@ -5,6 +5,20 @@
     <title>Enquesta</title>
 </head>
 <body>
-    <a href="{{ survey_link }}">Fes l'enquesta en català</a>
+    <h1>Ens vols donar un cop de mà?</h1>
+    <p>
+        Amb l'inter&egrave;s de millorar el projecte, hem desenvolupat aquesta breu <a href="{{ survey_link }}">enquesta</a>
+        de menys de cinc minuts. Ens encantaria poder comptar amb la teva opini&oacute;. Les teves respostes ens ajudaran a
+        avan&ccedil;ar en el coneixement cient&iacute;fic de la participaci&oacute; ciutadana en projectes ambientals i de salut p&uacute;blica.
+    </p>
+    <p>
+        Les teves respostes seran an&ograve;nimes, per&ograve; ens permetran con&egrave;ixer millor als nostres col&middot;laboradors i les seves
+        motivacions i poder aix&iacute; millorar el nostre servei en el futur.
+    </p>
+    <p>
+        <a href="{{ survey_link }}">Fer l'enquesta en catal&agrave;.</a>
+    </p>
+    <p>La enquesta forma part d'un estudi desenvolupat pel CEAB-CSIC i la UPF en el marc de Mosquito Alert</p>
+    <p class="centeredImage"><img style="max-width: 100%; height: auto; display: block; margin-left: auto; margin-right: auto;" src="http://webserver.mosquitoalert.com/static/tigahelp/ma_ceab_uab.jpg"></p>
 </body>
 </html>
