Better hidden blood controls

--- a/tigacrafting/templates/tigacrafting/expert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_annotation.html
@@ -71,6 +71,14 @@
             border: 2px solid red;
         }
 
+        .moon {
+            background-image: url({% static "tigacrafting/css/moon.svg" %});
+            width: 16px;
+            height: 16px;
+            background-size: 100% 100%;
+            display: inline-block;
+        }
+
     </style>
 
     {% block fa_css %}
