survey link revision

--- a/tigacrafting/templates/tigacrafting/survey/survey_ca.html
+++ b/tigacrafting/templates/tigacrafting/survey/survey_ca.html
@@ -19,6 +19,6 @@
         <a href="{{ survey_link }}">Fer l'enquesta en catal&agrave;.</a>
     </p>
     <p>La enquesta forma part d'un estudi desenvolupat pel CEAB-CSIC i la UPF en el marc de Mosquito Alert</p>
-    <p class="centeredImage"><img style="max-width: 100%; height: auto; display: block; margin-left: auto; margin-right: auto;" src="http://webserver.mosquitoalert.com/static/tigahelp/ma_ceab_uab.jpg"></p>
+    <p class="centeredImage"><img style="max-width: 100%; height: auto; display: block; margin-left: auto; margin-right: auto;" src="http://www.mosquitoalert.com/wp-content/uploads/2022/06/ceab-upf.png"></p>
 </body>
 </html>
