--- a/tigacrafting/templates/tigacrafting/survey/survey_es.html
+++ b/tigacrafting/templates/tigacrafting/survey/survey_es.html
@@ -20,6 +20,6 @@
         <a href="{{ survey_link }}">Hacer la encuesta en espa&ntilde;ol.</a>
     </p>
     <p>La encuentra forma parte de un estudio desarrollado por el CEAB-CSIC y la UPF en el marco de Mosquito Alert.</p>
-    <p class="centeredImage"><img style="max-width: 100%; height: auto; display: block; margin-left: auto; margin-right: auto;" src="http://webserver.mosquitoalert.com/static/tigahelp/ma_ceab_uab.jpg"></p>
+    <p class="centeredImage"><img style="max-width: 100%; height: auto; display: block; margin-left: auto; margin-right: auto;" src="http://www.mosquitoalert.com/wp-content/uploads/2022/06/ceab-upf.png"></p>
 </body>
 </html>
