--- a/tigacrafting/templates/tigacrafting/survey/survey_en.html
+++ b/tigacrafting/templates/tigacrafting/survey/survey_en.html
@@ -17,6 +17,6 @@
         <a href="{{ survey_link }}">Take the survey in english.</a>
     </p>
     <p>The survey is part of a study developed by Mosquito Alert, CEAB-CSIC, and UPF.</p>
-    <p class="centeredImage"><img style="max-width: 100%; height: auto; display: block; margin-left: auto; margin-right: auto;" src="http://webserver.mosquitoalert.com/static/tigahelp/ma_ceab_uab.jpg"></p>
+    <p class="centeredImage"><img style="max-width: 100%; height: auto; display: block; margin-left: auto; margin-right: auto;" src="http://www.mosquitoalert.com/wp-content/uploads/2022/06/ceab-upf.png"></p>
 </body>
 </html>
