--- a/tigacrafting/templates/tigacrafting/survey/survey_en.html
+++ b/tigacrafting/templates/tigacrafting/survey/survey_en.html
@@ -8,13 +8,13 @@
     <h1>Want to help us?</h1>
     <p>
         We’re always researching ways to improve and better reach citizen scientists interested in studying and
-        monitoring mosquitoes. We’ve developed this short <a href="{{ survey_link }}">survey</a> and we’d be glad to
+        monitoring mosquitoes. We’ve developed this short <a href="{{ survey_link }}" target="_blank">survey</a> and we’d be glad to
         hear from you. It will take less than 5 minutes and your feedback will help advance scientific knowledge of
         citizen participation in ecological monitoring projects.
     </p>
     <p>Your answers will remain anonymous and will provide insight into our citizen scientists.</p>
     <p>
-        <a href="{{ survey_link }}">Take the survey in english.</a>
+        <a href="{{ survey_link }}" target="_blank">Take the survey in english.</a>
     </p>
     <p>The survey is part of a study developed by Mosquito Alert, CEAB-CSIC, and UPF.</p>
     <p class="centeredImage"><img style="max-width: 100%; height: auto; display: block; margin-left: auto; margin-right: auto;" src="http://www.mosquitoalert.com/wp-content/uploads/2022/06/ceab-upf.png"></p>
