--- a/tigacrafting/templates/tigacrafting/superexpert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/superexpert_report_annotation.html
@@ -108,6 +108,9 @@
         <li>
             <a href="{% url 'workload_stats' %}">Workload Stats</a>
         </li>
+        <li>
+            <a href="{% url 'report_expiration' %}">Blocked reports</a>
+        </li>
 
         {% for t in country_name %}
             <li>
