--- a/tigacrafting/templates/tigacrafting/expert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_annotation.html
@@ -241,6 +241,11 @@
                             <li>
                                 <a href="{% url 'predefined_messages' %}" target="_blank">Predefined texts</a>
                             </li>
+                            {% if user.userstat.is_national_supervisor %}
+                            <li>
+                                <a href="{% url 'global_assignments' %}">Report queue</a>
+                            </li>
+                            {% endif %}
                             {% if tasks_per_page_choices %}
                                 <li class="dropdown">
                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Reports per page<span class="caret"></span></a>
