Reviewed and added progress

--- a/tigacrafting/templates/tigacrafting/superexpert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/superexpert_report_annotation.html
@@ -109,7 +109,7 @@
             <a href="{% url 'workload_stats' %}">Workload Stats</a>
         </li>
         <li>
-            <a href="{% url 'report_expiration' %}">Blocked reports</a>
+            <a href="{% url 'report_expiration' %}">Pending reports</a>
         </li>
 
         {% for t in country_name %}
