--- a/tigacrafting/templates/tigacrafting/report_expiration.html
+++ b/tigacrafting/templates/tigacrafting/report_expiration.html
@@ -22,6 +22,28 @@
             padding: 5px 5px 5px 5px;
             margin: 5px 5px 5px 5px;
         }
+        #loading-div-background
+        {
+            display:none;
+            position:fixed;
+            top:0;
+            left:0;
+            background:black;
+            width:100%;
+            height:100%;
+        }
+         #loading-div
+        {
+             width: 300px;
+             height: 200px;
+             background-color: #0c0b0b;
+             text-align:center;
+             position:absolute;
+             left: 50%;
+             top: 50%;
+             margin-left:-150px;
+             margin-top: -100px;
+         }
     </style>
     <script src="{% static 'tigacrafting/macro_messages.js' %}"></script>
   </head>
@@ -80,6 +102,12 @@
         <h4>There are no currently blocked reports</h4>
       {% endif %}
   </div>
+    <div id="loading-div-background">
+        <div id="loading-div" class="ui-corner-all" >
+          <img style="height:80px;margin:30px;" src="{% static 'tigacrafting/css/loader_128.gif' %}" alt="Loading.."/>
+          <h2 style="color:gray;font-weight:normal;">Releasing reports...</h2>
+         </div>
+    </div>
   </body>
     <script>
         var csrf_token = '{{ csrf_token }}';
