--- a/stats/templates/stats/global_assignments.html
+++ b/stats/templates/stats/global_assignments.html
@@ -63,6 +63,8 @@
                 <p>Reports in progress are reports which have not yet been assigned to at least 3 experts. Therefore, they are considered work in progress. This count excludes unassigned reports.</p>
                 <p><strong>Pending reports</strong></p>
                 <p>This is the total pending (assigned but not yet validated) reports for the users of the current country. These users include the national supervisor of the current country.</p>
+                <p><strong>Blocked reports</strong></p>
+                <p>Number of reports which have been claimed by experts and not validated for more than <b>{{ days }}</b>  days.</p>
             </div>
             <div class="col-md-6">
                 <p><h3>Summary stats:</h3></p>
@@ -72,6 +74,8 @@
                 <p><h3>{{ summary.total_progress }}</h3></p>
                 <p><strong>Total pending reports:</strong></p>
                 <p><h3>{{ summary.total_pending }}</h3></p>
+                <p><strong>Total blocked reports:</strong></p>
+                <p><h3>{{ summary.total_blocked }} {% if summary.total_blocked > 0 %} <a class="btn btn-primary" href="{% url 'report_expiration' %}" target="_blank">Manage blocked for all countries</a> {% endif %}</h3></p>
             </div>
       </div>
   </div>
@@ -108,6 +112,13 @@
                         </p>
                     </div>
                 </div>
+                {% if d.blocked > 0 %}
+                <div class="col-md-3">
+                    <h4>Blocked reports</h4>
+                    <h1>{{ d.blocked }}</h1>
+                    <a class="btn btn-primary" href="{% url 'report_expiration' country_id=d.ns_country_id %}" target="_blank">Manage blocked</a>
+                </div>
+                {% endif %}
             </div>
         </div>
       </div>
