Updated html files

--- a/tigahelp/templates/tigahelp/project_about_gl.html
+++ b/tigahelp/templates/tigahelp/project_about_gl.html
@@ -19,16 +19,9 @@ Sobre El Proyecto
         </div>
 
 
-        <h2>¿Qué es Mosquito Alert?</h2>
-        <p>Mosquito Alert es una plataforma de ciencia ciudadana que permite la colaboración de distintos actores en el
-            estudio, seguimiento y control de especies de mosquitos vectores de enfermedades como el dengue, el Zika, la
-            chikungunya o la fiebre del Nilo Occidental.</p>
-        <p> Tanto la ciudadanía, como el mundo científico, o los agentes de salud pública y el sector educativo tienen
-            un papel clave en el proyecto. En Mosquito Alert, cualquier persona puede generar y compartir datos (1) y
-            participar en su validación; profesionales de la entomología etiquetan estos datos y dan respuesta a quién
-            participa (2); los datos, una vez validados, se ponen a disposición del público general mediante un mapa web
-            interactivo (3). Desde la ciencia (4) y por parte de los agentes de salud pública (5) se tiene también
-            acceso a ellos, y se pueden usar para el estudio, el seguimiento y el control de estas especies.</p>
+        <h2>Que é Mosquito Alert?</h2>
+        <p>Mosquito Alert é unha plataforma de ciencia cidadá que permite a colaboración de distintos actores no estudo, seguimento e control de especies de mosquitos vectores de enfermidades como o dengue, o Zika, a chikungunya ou a febre do Nilo Occidental.</p>
+        <p> Tanto a cidadanía, como o mundo científico, ou os axentes de saúde pública e o sector educativo teñen un papel clave no proxecto. En Mosquito Alert, calquera persoa pode xerar e compartir datos (1) e participar na súa validación; profesionais da entomoloxía etiquetan estes datos e danlle resposta a quen participa (2); os datos, unha vez validados, póñense ao dispor do público xeral mediante un mapa web interactivo (3). Desde a ciencia (4) e por parte dos axentes de saúde pública (5) tense tamén acceso a eles, e pódense usar para o estudo, o seguimento e o control destas especies.</p>
 
         <p class="centeredImage">
 
@@ -37,21 +30,11 @@ Sobre El Proyecto
         </p>
 
 
-        <h2>¿Por qué es necesario Mosquito Alert?</h2>
-        <p>En las últimas décadas el número de mosquitos invasores y de enfermedades emergentes transmitidas por
-            mosquitos ha aumentado a escala global. Nuevas especies invasoras, principalmente del género <em>Aedes</em>,
-            se han establecido en nuevas áreas y siguen en expansión. Estos mosquitos (<em>Aedes</em>) son de
-            importancia sanitaria por su capacidad de transmitir enfermedades como el dengue, el Zika o la chikungunya,
-            mientras que el mosquito común (<em>Culex pipiens</em>) cobra importancia por poder transmitir el virus de
-            la fiebre del Nilo Occidental. El riesgo que suponen para la salud pública requiere una vigilancia de sus
-            poblaciones.</p>
-        <p>Conscientes de la complejidad del problema, Mosquito Alert permite abrir la vigilancia e investigación de
-            estos mosquitos a la ciudadanía y permite la colaboración entre distintos agentes, a través de su app y
-            resto de plataformas y comunidades.</p>
-        <h2>¿Qué datos se recogen?</h2>
-        <p>Se recogen datos de 5 especies diferentes de mosquito: el mosquito tigre (<em>Aedes albopictus</em>), el
-            mosquito de la fiebre amarilla (<em>Aedes aegypti</em>), el mosquito del Japón (<em>Aedes japonicus</em>),
-            el mosquito de Corea (<em>Aedes koreicus</em>) y el mosquito común (<em>Culex pipiens</em>).</p>
+        <h2>Por que é necesario Mosquito Alert?</h2>
+        <p>Nas últimas décadas o número de mosquitos invasores e de enfermidades emerxentes transmitidas por mosquitos aumentou a escala global. Novas especies invasoras, principalmente do xénero <i>Aedes</i>, establecéronse en novas áreas e seguen en expansión. Estes mosquitos (<i>Aedes</i>) son de importancia sanitaria pola súa capacidade de transmitir enfermidades como o dengue, o Zika ou a chikungunya, mentres que o mosquito común (<i>Culex pipiens</i>) cobra importancia por poder transmitir o virus da febre do Nilo Occidental. O risco que supoñen para a saúde pública require unha vixilancia das súas poboacións.</p>
+        <p>Conscientes da complexidade do problema, Mosquito Alert permite abrir a vixilancia e investigación destes mosquitos á cidadanía e permite a colaboración entre distintos axentes, a través do seu app e resto de plataformas e comunidades.</p>
+        <h2>Que datos recóllense?</h2>
+        <p>Recóllense datos de 5 especies diferentes de mosquito: o mosquito tigre (<i>Aedes albopictus</i>), o mosquito da febre amarela (<i>Aedes aegypti</i>), o mosquito do Xapón (<i>Aedes japonicus</i>), o mosquito de Corea (<i>Aedes koreicus</i>) e o mosquito común (<i>Culex pipiens</i>).</p>
 
 
         <p class="centeredImage">
@@ -61,9 +44,7 @@ Sobre El Proyecto
         </p>
 
 
-        <p>De estas especies, se recogen datos de mosquitos, de sus lugares de cría, y de picaduras. Todos estos datos
-            son relevantes para responder distintas preguntas relacionadas con la investigación de estas especies, y
-            también con su seguimiento y control.</p>
+        <p>Destas especies, recóllense datos de mosquitos, dos seus lugares de cría, e de picaduras. Todos estes datos son relevantes para responder distintas preguntas relacionadas coa investigación destas especies, e tamén co seu seguimento e control.</p>
 
 
         <p class="centeredImage">
@@ -73,13 +54,7 @@ Sobre El Proyecto
         </p>
 
 
-        <p>Además, de manera aleatoria, y no más de 5 veces al día, si la persona usuaria de la app lo permite, Mosquito
-            Alert recoge la posición aproximada del dispositivo. Las ubicaciones están enmascaradas en una cuadrícula de
-            0,025 x 0,025 grados de latitud y longitud (aproximadamente 2x2 km) antes de enviarse al servidor de
-            Mosquito Alert. Por razones de privacidad, solo el identificador de la cuadrícula se comparte con Mosquito
-            Alert, no la ubicación precisa. Esta información es esencial para la ciencia: sin ella, no se puede saber si
-            hay muchos mosquitos o si en realidad lo que hay es mucha participación. Esta información sería equivalente
-            a lo que, en ecología, se conoce como el esfuerzo de muestreo. </p>
+        <p>Ademais, de maneira aleatoria, e non máis de 5 veces ao día, se a persoa usuaria da app o permite, Mosquito Alert recolle a posición aproximada do dispositivo. As localizacións están enmascaradas nunha cuadrícula de 0,025 x 0,025 graos de latitude e lonxitude (aproximadamente 2x2 km) antes de enviarse ao servidor de Mosquito Alert. Por razóns de privacidade, só o identificador da cuadrícula se comparte con Mosquito Alert, non a localización precisa. Esta información é esencial para a ciencia: sen ela, non se pode saber se hai moitos mosquitos ou se en realidade o que hai é moita participación. Esta información sería equivalente ao que, en ecoloxía, coñécese como o esforzo de mostraxe.</p>
 
 
         <p class="centeredImage">
@@ -89,30 +64,17 @@ Sobre El Proyecto
         </p>
 
 
-        <h2>¿Para qué sirven los datos?</h2>
-        <p> Estos son algunos ejemplos:</p>
+        <h2>Para que serven os datos?</h2>
+        <p>Estes son algúns exemplos:</p>
         <ul>
-            <li type="disc">Para hacer el seguimiento de las poblaciones de mosquito establecidas, así como para
-                descubrir nuevas poblaciones. Las notificaciones que las personas envían a Mosquito Alert han demostrado
-                en los últimos años ser un eficaz sistema de alerta temprana ante la invasión de nuevos mosquitos.
-            </li>
-            <li type="disc">Las observaciones de estos mosquitos, así como de sus lugares de cría en la vía pública y
-                los informes de picaduras, ayudan a los científicos y gestores de la salud pública a evaluar el riesgo y
-                la gestión de sus poblaciones. Para poder estimar la abundancia de mosquitos en un lugar, es necesario
-                corregir las observaciones con el esfuerzo de muestreo. Con este fin la app Mosquito Alert recoge datos
-                de la posición aproximada del dispositivo en intervalos aleatorios. La posición registrada no es exacta,
-                sino que se encuadra en una celda de 2x2 km.
-            </li>
-            <li type="disc">Actualmente se está trabajando para desarrollar un sistema de predicción de riesgos
-                epidemiológicos a tiempo real, participativo y dinámico.
-            </li>
+            <li type="disc">Para facer o seguimento das poboacións de mosquito establecidas, así como para descubrir novas poboacións. As notificacións que as persoas envían a Mosquito Alert demostraron nos últimos anos ser un eficaz sistema de alerta temperá ante a invasión de novos mosquitos.</li>
+            <li type="disc">As observacións destes mosquitos, así como dos seus lugares de cría na vía pública e os informes de picaduras, axúdanlles aos científicos e xestores da saúde pública a avaliar o risco e a xestión das súas poboacións. Para poder estimar a abundancia de mosquitos nun lugar, é necesario corrixir as observacións co esforzo de mostraxe. Con este fin a app Mosquito Alert recolle datos da posición aproximada do dispositivo en intervalos aleatorios. A posición rexistrada non é exacta, senón que se encadra nunha cela de 2 x 2 km.</li>
+            <li type="disc">Actualmente estase traballando para desenvolver un sistema de predición de riscos epidemiolóxicos a tempo real, participativo e dinámico.</li>
         </ul>
-        <h2>¿Dónde puedo encontrar más información</h2>
-        <p>Encontrarás más información en la página web del proyecto y en las redes sociales.</p>
+        <h2>Onde podo atopar máis información?</h2>
+        <p>Atoparás máis información na páxina web do proxecto e nas redes sociais.</p>
         <p><a href="http://www.mosquitoalert.com">www.mosquitoalert.com</a></p>
-        <p>IEn los ajustes de la app encontrarás el tutorial para participar, la guía de mosquitos para aprender a
-            identificarlos, la política de privacidad y términos de uso e información sobre las entidades que impulsan
-            el proyecto.</p>
+        <p>En os axustes da app atoparás o titorial para participar, a guía de mosquitos para aprender a identificalos, a política de privacidade e termos de uso e información sobre as entidades que impulsan o proxecto.</p>
 
 
     </div>
