--- a/tigahelp/templates/tigahelp/about_us_gl.html
+++ b/tigahelp/templates/tigahelp/about_us_gl.html
@@ -8,22 +8,20 @@ Sobre Nosotros
 {% block content %}
 
 <h2>Entidades coordinadoras</h2>
-<p>Mosquito Alert está liderado por distintas instituciones públicas de investigación: el Centro de Estudios Avanzados
-    de Blanes del Consejo Superior de Investigaciones Científicas <strong>(CEAB-CSIC)</strong>, el Centro de
-    Investigaciones Ecológicas y Aplicaciones Forestales <strong>(CREAF)</strong> y la Universidad Pompeu Fabra <strong>(UPF)</strong>.
-    También participa la Institución Catalana de Investigación y Estudios Avanzados <strong>(ICREA)</strong>.</p>
+<p>Mosquito Alert está liderado por distintas institucións públicas de investigación: o Centro de Estudos Avanzados de Blanes do Consello Superior de Investigacións Científicas<strong>(CEAB-CSIC)</strong>, o Centro de Investigacións Ecolóxicas e Aplicacións Forestais<strong>(CREAF)</strong>e a Universidade Pompeu Fabra<strong>(UPF)</strong>. Tamén participa a Institución Catalá de Investigación e Estudos Avanzados<strong>(ICREA)</strong>.</p>
 <p class="centeredImage">
     <img style="max-width: 100%; height: auto;" src="{% static "tigahelp/colaboradors_about_us.jpg" %}">
 </p>
 
-<h2>Colaboradores</h2> <p>Mosquito Alert es posible también gracias a la participación de distintas personas expertas
-    (profesionales que, por ejemplo, validan los datos ciudadanos) y entidades de varios países que trabajan en el
-    ámbito de la salud pública, el control de especies invasoras o entidades de educación ambiental.</p> <h2>
-    Financiación y participación en proyectos</h2> <p>Mosquito Alert participa en proyectos competitivos de
-    investigación, comunicación científica y divulgación (Plan Nacional estatal, Horizonte 2020 de la Unión Europea,
-    Fundación "la Caixa", entre otros), y se financia también con la aportación de recursos de las entidades que lideran
-    el proyecto y entidades colaboradoras.</p> <p>Más información sobre entidades, colaboraciones y proyectos en <a
-        href="http://www.mosquitoalert.com">www.mosquitoalert.com</a> y redes sociales.</p>
+<h2>Colaboradores</h2>
+<p>Mosquito Alert é posible tamén grazas á participación de distintas persoas expertas (profesionais que, por exemplo, validan os datos cidadáns) e entidades de varios países que traballan no ámbito da saúde pública, o control de especies invasoras ou entidades de educación ambiental.</p>
+<h2>Financiamento e participación en proxectos</h2>
+<p>
+    Mosquito Alert participa en proxectos competitivos de investigación, comunicación científica e divulgación (Plan Nacional estatal, Horizonte 2020 da Unión Europea, Fundación "a Caixa", entre outros), e finánciase tamén coa achega de recursos das entidades que lideran o proxecto e entidades colaboradoras.
+</p>
+<p>
+    Máis información sobre entidades, colaboracións e proxectos en <a href="http://www.mosquitoalert.com">www.mosquitoalert.com</a> e redes sociais.
+</p>
 
 <p class="centeredImage"><img style="max-width: 100%; height: auto;" src="{% static "tigahelp/banner_web.jpg" %}"></p>
 
