--- a/tigahelp/templates/tigahelp/privacy_gl.html
+++ b/tigahelp/templates/tigahelp/privacy_gl.html
@@ -9,75 +9,18 @@ Política de privacidad
 {% block content %}
 
 <div class="center">
-    <h2>Política de privacidad</h2>
+    <h2>Política de privacidade</h2>
 </div>
 
-<p>Mosquito Alert (en cualquiera de los nombres que haya tenido en el pasado o que pueda adquirir en el futuro)
-    recopila, entre otras cosas, datos e imágenes compartidos por voluntarios y los pone a disposición de terceros y del
-    público en general. Para proteger la privacidad de sus voluntarios, Mosquito Alert tiene como objetivo evitar la
-    recopilación de información personal, es decir, información que se puede utilizar para identificar individualmente a
-    una persona física específica. Por lo tanto, Mosquito Alert solicita que los voluntarios no transmitan nombres,
-    direcciones, contraseñas y cualquier otra información personal al enviar informes. Las ubicaciones exactas de las
-    observaciones se recopilan durante el envío del informe, y pueden coincidir con la ubicación exacta de los
-    voluntarios, pero esta información está vinculada sólo al informe y a una identificación de usuario generada
-    aleatoriamente. No se solicitan metadatos de fotografías, y si las fotografías enviadas al proyecto a través de la
-    aplicación contienen metadatos, estos metadatos se eliminarán una vez que la imagen llegue al servidor del proyecto,
-    a excepción de la geolocalización de la fotografía, que se mantendrá asociada a la fotografía y puede ser
-    publicada.</p> <p>Mosquito Alert también recopila en un segundo plano la ubicación aproximada de los voluntarios a
-    intervalos aleatorios en el tiempo (para evaluar las áreas geográficas cubiertas o exploradas por los voluntarios),
-    pero esta información también está vinculada únicamente a un identificador de usuario generado aleatoriamente. Los
-    voluntarios pueden incluir notas y fotografías en sus informes, pero es su responsabilidad no incluir en estas notas
-    y fotografías cualquier información que deseen mantener en privado o cualquier información que viole los derechos de
-    privacidad de otros, o sea inconsistente con el acuerdo de usuario de Mosquito Alert.</p> <p>Mosquito Alert dispone
-    de mecanismos para evitar, en la medida de lo posible, que los datos personales que los usuarios hayan enviado por
-    error, a pesar de las medidas de anonimización, sean compartidos con el público en general. Asimismo, Mosquito Alert
-    aplica medidas para detectar si se han compartido datos personales y eliminarlos de la base de datos, en la medida
-    de lo posible. Pese a ello, si en algún caso concreto estas medidas no impiden la publicación de un dato personal,
-    se anima a quienes lo detecten a que lo notifiquen a los responsables de Mosquito Alert, con el fin de proceder a
-    eliminar su aparición en el espacio público si es posible. Mosquito Alert no puede garantizar la eliminación de los
-    datos personales que pudieran ser recabados por Mosquito Alert por error a pesar de las medidas de anonimización, ni
-    puede garantizar que dichos datos no serán visibles para los miembros de Mosquito Alert o para cualquiera de sus
-    colaboradores o terceros al uso.</p> <p>Se hace notar que si los participantes comparten sus observaciones
-    (informes) en cualquier medio público, como por ejemplo en las redes sociales, pueden estar asociando estas
-    observaciones con sus datos personales (por ejemplo, cuenta personal en redes sociales), renunciando así,
-    voluntariamente, al anonimato que el proyecto busca brindar.</p> <p>Mosquito Alert permite a los participantes
-    mantener sus datos manteniendo el anonimato, mediante un sistema de autenticación mediante cuentas externas (correo
-    electrónico, Facebook, Twitter), a través de Firebase. Esto permite a los participantes sincronizar varios
-    dispositivos y recuperar datos si tienen que desinstalar la aplicación. Esta opción es voluntaria y no está activada
-    por defecto. En cualquier caso, la información recopilada por Firebase para este fin no se almacena en los
-    servidores de Mosquito Alert, no está vinculada a los datos científicos recopilados por Mosquito Alert, y no es
-    procesada por Mosquito Alert.</p> <p>Una lista detallada de la información que recopila Mosquito Alert es la
-    siguiente:</p>
+<p>Mosquito Alert (en calquera dos nomes que tivese no pasado ou que poida adquirir no futuro) recompila, entre outras cousas, datos e imaxes compartidos por voluntarios e ponos ao dispor de terceiros e do público en xeral. Para protexer a privacidade dos seus voluntarios, Mosquito Alert ten como obxectivo evitar a recompilación de información persoal, é dicir, información que se pode utilizar para identificar individualmente a unha persoa física específica. Por tanto, Mosquito Alert solicita que os voluntarios non transmitan nomes, enderezos, contrasinais e calquera outra información persoal ao enviar informes. As localizacións exactas das observacións recompílanse durante o envío do informe, e poden coincidir coa localización exacta dos voluntarios, pero esta información está vinculada só ao informe e a unha identificación de usuario xerada aleatoriamente. Non se solicitan metadatos de fotografías, e se as fotografías enviadas ao proxecto a través da aplicación conteñen metadatos, estes metadatos eliminaranse unha vez que a imaxe chegue ao servidor do proxecto, fóra da xeolocalización da fotografía, que se manterá asociada á fotografía e pode ser publicada.</p>
+<p>Mosquito Alert tamén recompila nun segundo plano a localización aproximada dos voluntarios a intervalos aleatorios no tempo (para avaliar as áreas xeográficas cubertas ou exploradas polos voluntarios), pero esta información tamén está vinculada unicamente a un identificador de usuario xerado aleatoriamente. Os voluntarios poden incluír notas e fotografías nos seus informes, pero é a súa responsabilidade non incluír nestas notas e fotografías calquera información que desexen manter en privado ou calquera información que viole os dereitos de privacidade doutros, ou sexa inconsistente co acordo de usuario de Mosquito Alert.</p>
+<p>Mosquito Alert dispón de mecanismos para evitar, na medida do posible, que os datos persoais que os usuarios enviasen por erro, a pesar das medidas de anonimización, sexan compartidos co público en xeral. Así mesmo, Mosquito Alert aplica medidas para detectar se se compartiron datos persoais e eliminalos da base de datos, na medida do posible. A pesar diso, se nalgún caso concreto estas medidas non impiden a publicación dun dato persoal, anímase a quen o detecte a que llelo notifiquen aos responsables de Mosquito Alert, co fin de proceder a eliminar a súa aparición no espazo público se é posible. Mosquito Alert non pode garantir a eliminación dos datos persoais que puidesen ser solicitados por Mosquito Alert por erro a pesar das medidas de anonimización, nin pode garantir que os devanditos datos non serán visibles para os membros de Mosquito Alert ou para calquera dos seus colaboradores ou terceiros ao uso.</p>
+<p>Faise notar que se os participantes comparten as súas observacións (informes) en calquera medio público, por exemplo nas redes sociais, poden estar a asociar estas observacións cos seus datos persoais (por exemplo, conta persoal en redes sociais), renunciando así, voluntariamente, ao anonimato que o proxecto busca brindar.</p>
+<p>Mosquito Alert permítelles aos participantes manter os seus datos mantendo o anonimato, mediante un sistema de autenticación mediante contas externas (correo electrónico, Facebook, Twitter), a través de Firebase. Isto permítelles aos participantes sincronizar varios dispositivos e recuperar datos se teñen que desinstalar a aplicación. Esta opción é voluntaria e non está activada por defecto. En calquera caso, a información recompilada por Firebase para este fin non se almacena nos servidores de Mosquito Alert, non está vinculada aos datos científicos recompilados por Mosquito Alert, e non é procesada por Mosquito Alert.</p> <p>Unha lista detallada da información que recompila Mosquito Alert é a seguinte:</p>
 <ul>
-    <li>Informes recopilados y enviados por voluntarios con información relativa a focos de cría, picaduras y
-        avistamientos de posibles mosquitos (Mosquito Alert actualmente se focaliza en 5 especies diferentes de
-        mosquitos), así como las respuestas de los voluntarios a las preguntas que se les envían a través de la
-        aplicación. Esto incluye la ubicación precisa de las observaciones y fotografías hechas por los voluntarios (así
-        como la ubicación de los metadatos de las fotografías, si corresponde), notas o cualquier otra información que
-        el voluntario agregue al informe.
-    </li>
-    <li>Información sobre la ubicación aproximada de los voluntarios, muestreada en segundo plano y a intervalos de
-        tiempo aleatorios. Esta información se recolecta con fines científicos, para conocer las áreas geográficas
-        exploradas por los voluntarios (esfuerzo de muestreo, es decir, en qué áreas hay o no participación y en qué
-        medida, para poder relacionarlo con el número de observaciones en esa misma área por ejemplo con técnicas de
-        modelado o estadísticas), y para mejorar el conocimiento sobre las vías de dispersión de mosquitos relacionadas
-        con la movilidad humana (es decir, para comprender mejor la relación entre cómo se mueven las personas a gran
-        escala y la dispersión de estas especies en el territorio). Esta información es de gran interés científico. Para
-        evitar la recopilación de las ubicaciones exactas de los voluntarios, estas ubicaciones se colocan en una
-        cuadrícula de 0,025 grados de latitud y longitud y solo se transmite al servidor el identificador de los
-        cuadrados de la cuadrícula en los que caen. Por lo tanto, es imposible determinar la ubicación real, dentro de
-        un área de 0,025 grados de latitud por 0,025 grados de longitud (entre aproximadamente 3,1 y aproximadamente 7,7
-        km cuadrados, o entre 765 y 1901 campos de fútbol). En cualquier caso, los voluntarios pueden desactivar esta
-        opción, activada por defecto, en la configuración de la aplicación.
-    </li>
-    <li>Información sobre el modelo del teléfono, la batería, la configuración del idioma y la versión de la aplicación
-        (es decir, la versión instalada y el sistema operativo y la versión del mismo en la que está instalada). Esta
-        información se utiliza para ayudar al equipo de investigación a mejorar la aplicación.
-    </li>
-    <li>Si el voluntario elige autenticarse a través de una cuenta externa usando Firebase, Firebase puede recopilar la
-        dirección de correo electrónico, contraseña, número de teléfono, dirección IP y otra información asociada con
-        esa cuenta externa.
-    </li>
+  <li>Informes recompilados e enviados por voluntarios con información relativa a focos de cría, picaduras e avistamentos de posibles mosquitos (Mosquito Alert actualmente focalízase en 5 especies diferentes de mosquitos), así como as respostas dos voluntarios ás preguntas que se lles envían a través da aplicación. Isto inclúe a localización precisa das observacións e fotografías feitas polos voluntarios (así como a localización dos metadatos das fotografías, se corresponde), notas ou calquera outra información que o voluntario agregue ao informe.</li>
+  <li>Información sobre a localización aproximada dos voluntarios, mostreada en segundo plano e a intervalos de tempo aleatorios. Esta información colléitase con fins científicos, para coñecer as áreas xeográficas exploradas polos voluntarios (esforzo de mostraxe, é dicir, en que áreas hai ou non participación e en que medida, para poder relacionalo co número de observacións nesa mesma área por exemplo con técnicas de modelado ou estatísticas), e para mellorar o coñecemento sobre as vías de dispersión de mosquitos relacionadas coa mobilidade humana (é dicir, para comprender mellor a relación entre como se moven as persoas a grande escala e a dispersión destas especies no territorio). Esta información é de grande interese científico. Para evitar a recompilación das localizacións exactas dos voluntarios, estas localizacións colócanse nunha cuadrícula de 0,025 graos de latitude e lonxitude e só se lle transmite ao servidor o identificador dos cadrados da cuadrícula nos que caen. Por tanto, é imposible determinar a localización real, dentro dunha área de 0,025 graos de latitude por 0,025 graos de lonxitude (entre aproximadamente 3,1 e aproximadamente 7,7 km cadrados, ou entre 765 e 1901 campos de fútbol). En calquera caso, os voluntarios poden desactivar esta opción, activada por defecto, na configuración da aplicación.</li>
+  <li>Información sobre o modelo do teléfono, a batería, a configuración do idioma e a versión da aplicación (é dicir, a versión instalada e o sistema operativo e a versión do mesmo na que está instalada). Esta información utilízase para axudar ao equipo de investigación a mellorar a aplicación.</li> <li>Se o voluntario elixe autenticarse a través dunha conta externa usando Firebase, Firebase pode recompilar a dirección de correo electrónico, contrasinal, número de teléfono, enderezo IP e outra información asociada con esa conta externa.</li>
 </ul>
 
 {% endblock %}
