--- a/tigahelp/templates/tigahelp/scoring_gl.html
+++ b/tigahelp/templates/tigahelp/scoring_gl.html
@@ -20,40 +20,34 @@ Mosquito Alert Info Puntuación
         </div>
 
         <h2>INFO PUNTUACIÓN</h2>
-        <p>Las acciones realizadas en Mosquito Alert tienen reconocimiento y recompensa en forma de puntos. El número de
-            puntos por informe varía en función de la información aportada y de su calidad.</p>
-        <p>Los puntos máximos que se pueden obtener por informe son:</p>
+        <p>As accións realizadas en Mosquito Alert teñen recoñecemento e recompensa en forma de puntos. O número de puntos por informe varía en función da información achegada e da súa calidade.</p>
+        <p>Os puntos máximos que se poden obter por informe son:</p>
         <ul>
             <li>Mosquito <em>Aedes</em> invasor: 20 puntos</li>
             <li>Mosquito común: 14 puntos</li>
             <li>Lugar de cría imbornal: 20 puntos</li>
-            <li>Otro lugar de cría en la vía pública: 16 puntos</li>
+            <li>Outro lugar de cría na vía pública: 16 puntos</li>
         </ul>
-        <p>Además, existen bonificaciones extra por el primer mosquito de la temporada, el primer informe del día o por
-            participar con frecuencia. Cuando se alcanza un número concreto de informes, no sólo se obtiene unos puntos
-            extra, sino que se consigue un trofeo especial. Existen distintos trofeos según los hitos alcanzados.</p>
-        <p>Aquellos informes que se envíen como mosquito pero resulten no ser mosquitos, según la validación experta, no
-            obtendrán puntos. Tampoco se puntuará una foto que no permita identificar el mosquito o lugar de cría.</p>
-        <p>La acumulación de puntos te permitirá ir ascendiendo de <b>nivel</b>:</p>
+        <p>Ademais, existen bonificacións extra polo primeiro mosquito da tempada, o primeiro informe do día ou por participar con frecuencia. Cando se alcanza un número concreto de informes, non só se obtén uns puntos extra, senón que se consegue un trofeo especial. Existen distintos trofeos segundo os fitos alcanzados.</p>
+        <p>Aqueles informes que se envíen como mosquito pero resulten non ser mosquitos, segundo a validación experta, non obterán puntos. Tampouco se puntuará unha foto que non permita identificar o mosquito ou lugar de cría.</p>
+        <p>A acumulación de puntos permitirache ir ascendendo de<b>nivel</b>:</p>
         <ul>
-            <li>(1) principiante (<em>beginner</em>)</li>
-            <li>(2) colaborador (<em>contributor</em>)</li>
-            <li>(3) experto (<em>expert</em>)</li>
-            <li>(4) maestro (<em>master</em>)</li>
-            <li>(5) gran maestro (<em>grandmaster</em>)</li>
+            <li>(1) principiante (<i>beginner</i>)</li>
+            <li>(2) colaborador (<i>contributor</i>)</li>
+            <li>(3) experto (<i>expert</i>)</li>
+            <li>(4) mestre (<i>master</i>)</li>
+            <li>(5) gran mestre (<i>grandmaster</i>)</li>
         </ul>
-        <p>Estos iconos indican el nivel alcanzado:</p>
+        <p>Estas iconas indican o nivel alcanzado:</p>
 
 
         <img src="{% static "tigahelp/InfoScoring_half.png" %}" width="100%">
 
 
         <h2>Panel de puntos</h2>
-        <p>Se accede al ránking global haciendo clic sobre la puntuación en la pantalla principal. Presionando sobre una
-            posición del ránking se despliega el desglose de puntos obtenidos por el usuario.</p>
-        <p>Haciendo clic en “Más detalles” se accede al panel de puntos desglosado.</p>
-        <p>En este apartado hay una lista de los informes enviados con la puntuación obtenida en cada uno de ellos. Los
-            informes son interactivos, al clicar se obtiene la puntuación desglosada y el porqué de la puntuación.</p>
+        <p>Accédese á clasificación global facendo clic sobre a puntuación na pantalla principal. Premendo sobre unha posición da clasificación desprégase a desagregación de puntos obtidos polo usuario.</p>
+        <p>Facendo clic en “Máis detalles” accédese ao panel de puntos desagregado.</p>
+        <p>Neste apartado hai unha lista dos informes enviados coa puntuación obtida en cada un deles. Os informes son interactivos, ao facer clic obtense a puntuación desagregada e o porqué da puntuación.</p>
 
     </div>
 
