--- a/tigahelp/templates/tigahelp/terms_gl.html
+++ b/tigahelp/templates/tigahelp/terms_gl.html
@@ -9,57 +9,18 @@ Acuerdo del usuario
 {% block content %}
 
 <div class="center">
-    <h2>Acuerdo del usuario</h2>
+    <h2>Acordo do usuario</h2>
 </div>
 
-<p>Mosquito Alert (en cualquiera de las denominaciones que haya tenido en el pasado o que pueda adquirir en el futuro)
-    es un sistema de ciencia ciudadana gestionado por el Centro de Estudios Avanzados de Blanes del Consejo Superior de
-    Investigaciones Científicas (CEAB-CSIC)<span>, Centro de Investigación Ecológica y Aplicaciones Forestales (CREAF), Universidad Pompeu Fabra (UPF) e Instituto Catalán de Investigación y Estudios Avanzados (ICREA).</span>
-</p> <p>Mosquito Alert depende de la recopilación de datos por parte del público en relación a varias especies de
-    mosquitos que son transmisores de enfermedades. La ciudadanía participa enviando y compartiendo, datos e imágenes, a
-    través de las distintas aplicaciones Mosquito Alert para dispositivos móviles y otros dispositivos electrónicos.
-    Para participar es necesario ser mayor de edad o participar bajo la supervisión de un adulto, de acuerdo con la
-    legislación española y de tu país de residencia.</p> <p>Para participar también debes aceptar la política de
-    privacidad de Mosquito Alert y aceptar los siguientes términos de uso:</p>
+<p>Mosquito Alert (en calquera das denominacións que tivese no pasado ou que poida adquirir no futuro) é un sistema de ciencia cidadá xestionado polo Centro de Estudos Avanzados de Blanes do Consello Superior de Investigacións Científicas (CEAB-CSIC), Centro de Investigación Ecolóxica e Aplicacións Forestais (CREAF), Universidade Pompeu Fabra (UPF) e Instituto Catalán de Investigación e Estudos Avanzados (ICREA).</p>
+<p>Mosquito Alert depende da recompilación de datos por parte do público en relación a varias especies de mosquitos que son transmisores de enfermidades. A cidadanía participa enviando e compartindo, datos e imaxes, a través das distintas aplicacións Mosquito Alert para dispositivos móbiles e outros dispositivos electrónicos. Para participar é necesario ser maior de idade ou participar baixo a supervisión dun adulto, de acordo con a lexislación española e do teu país de residencia.</p>
+<p>Para participar tamén debes aceptar a política de privacidade de Mosquito Alert e aceptar os seguintes termos de uso:</p>
 <ol>
-    <li>Las especies de mosquitos con las que trabaja Mosquito Alert pueden ser vectores de enfermedades como el dengue,
-        el chikungunya y el Zika. Mosquito Alert contribuye a la lucha contra estas enfermedades mediante la
-        recopilación de datos e imágenes, el análisis de toda esta información y la realización de actividades de
-        sensibilización, seguimiento y control de mosquitos. Como estos mosquitos son transmisores de enfermedades, al
-        participar en Mosquito Alert debes extremar las precauciones y no buscar de forma activa a estas especies
-        (directamente o a través de sus criaderos), especialmente en lugares donde las enfermedades que transmiten son
-        endémicas, o durante un brote de tales enfermedades. Participar en Mosquito Alert implica, por un lado, informar
-        de los encuentros con mosquitos que tienen las personas durante sus actividades normales, y por otro, cambiar
-        sus actividades para reducir su exposición a los mosquitos y sus criaderos. Así que debes aceptar que no debes
-        aumentar de ninguna manera tu exposición a los mosquitos participando en este proyecto.
-    </li>
-    <li>Al compartir tus datos y obras (por ejemplo, fotografías) con Mosquito Alert, acepta estos términos de uso,
-        acepta que las obras (por ejemplo, fotografías) se difundan de forma anónima sin indicar tu nombre o seudónimo y
-        otorgas a las instituciones que gestionan Mosquito Alert un Licencia asociada a tu obra de duración igual al
-        copyright aplicable vigente para poder explotar la obra sin restricción alguna y cederla a terceros en todo el
-        mundo, libre de regalías, no exclusiva y sublicenciable. En cualquier caso, estos términos no implican para el
-        autor original ninguna restricción en el uso de sus obras, pudiendo explotarlas por otros medios de manera
-        compatible con la cesión concedida mediante este documento.
-    </li>
-    <li>Por norma general, cualquier creación original que pueda protegerse por derechos de autor será difundida por
-        Mosquito Alert con licencia CC BY, indicando autor anónimo y el nombre del proyecto (ejemplo: Anónimo, CC BY
-        Mosquito Alert), aunque contenga el nombre del autor en él o en sus metadatos. Cuando sea posible, parte de las
-        bases de datos o tablas resultantes de las contribuciones de los usuarios se publicarán, como regla general,
-        bajo una licencia CC0. En caso de necesidad de dar acceso a información considerada sensible a terceros (por
-        ejemplo, profesionales encargados del seguimiento y control de mosquitos, personal investigador, gestores de
-        salud pública, etc.), se establecerán protocolos y/o licencias adecuadas para esta difusión.
-    </li>
-    <li>Garantizas que tienes los derechos legales necesarios sobre los datos y obras que compartes con Mosquito Alert y
-        que estos no son difamatorios, y no violan ninguna ley. La participación en Mosquito Alert es anónima para
-        garantizar la protección de la privacidad de los participantes. Por tanto, garantizas que no añadirás
-        información personal tuya o de terceros en los datos u obras que envíes a Mosquito Alert. Comprendes que estos
-        datos u obras pueden ser cedidos a terceros, y que Mosquito Alert no puede garantizar la capacidad de eliminar
-        cualquier posible dato personal que envíes por error.
-    </li>
-    <li>Aceptas indemnizar a las personas, instituciones y/o miembros de Mosquito Alert y colaboradores por cualquier
-        carga legal y/o monetaria y cualquier otro gasto que pueda incurrir como resultado de tu incumplimiento de la
-        garantía anterior.
-    </li>
+  <li>As especies de mosquitos coas que traballa Mosquito Alert poden ser vectores de enfermidades como o dengue, o chikungunya e o Zika. Mosquito Alert contribúe á loita contra estas enfermidades mediante a recompilación de datos e imaxes, a análise de toda esta información e a realización de actividades de sensibilización, seguimento e control de mosquitos. Como estes mosquitos son transmisores de enfermidades, ao participar en Mosquito Alert debes extremar as precaucións e non buscar de forma activa a estas especies (directamente ou a través dos seus criadeiros), especialmente en lugares onde as enfermidades que transmiten son endémicas, ou durante un brote de tales enfermidades. Participar en Mosquito Alert implica, por unha banda, informar dos encontros con mosquitos que teñen as persoas durante as súas actividades normais, e por outro, cambiar as súas actividades para reducir a súa exposición aos mosquitos e os seus criadeiros. Así que debes aceptar que non debes aumentar de ningunha maneira a túa exposición aos mosquitos participando neste proxecto.</li>
+  <li>Ao compartir os teus datos e obras (por exemplo, fotografías) con Mosquito Alert, acepta estes termos de uso, acepta que as obras (por exemplo, fotografías) se difundan de forma anónima sen indicar o teu nome ou pseudónimo e outorgas ás institucións que xestionan Mosquito Alert un Licenza asociada á túa obra de duración igual ao copyright aplicable vixente para poder explotar a obra sen restrición ningunha e cedela a terceiros en todo o mundo, libre de regalías, non exclusiva e sublicenciable. En calquera caso, estes termos non implican para o autor orixinal ningunha restrición no uso das súas obras, e poderán explotalas por outros medios de maneira compatible coa cesión concedida mediante este documento.</li>
+  <li>Por norma xeral, calquera creación orixinal que poida protexerse por dereitos de autor será difundida por Mosquito Alert con licenza CC BY, indicando autor anónimo e o nome do proxecto (exemplo: Anónimo, CC BY Mosquito Alert), aínda que conteña o nome do autor nel ou nos seus metadatos. Cando sexa posible, parte das bases de datos ou táboas resultantes das contribucións dos usuarios publicaranse, como regra xeral, baixo unha licenza CC0. En caso de necesidade de dar acceso a información considerada sensible a terceiros (por exemplo, profesionais encargados do seguimento e control de mosquitos, persoal investigador, xestores de saúde pública etc.), estableceranse protocolos e/ou licenzas adecuadas para esta difusión.</li>
+  <li>Garantes que tes os dereitos legais necesarios sobre os datos e obras que compartes con Mosquito Alert e que estes non son difamatorios, e non violan ningunha lei. A participación en Mosquito Alert é anónima para garantir a protección da privacidade dos participantes. Por tanto, garantes que non engadirás información persoal túa ou de terceiros nos datos ou obras que envíes a Mosquito Alert. Comprendes que estes datos ou obras poden ser cedidos a terceiros, e que Mosquito Alert non pode garantir a capacidade de eliminar calquera posible dato persoal que envíes por erro.</li>
+  <li>Aceptas indemnizar as persoas, institucións e/ou membros de Mosquito Alert e colaboradores por calquera carga legal e/ou monetaria e calquera outro gasto que poida incorrer como resultado do teu incumprimento da garantía anterior.</li>
 </ol>
 
 {% endblock %}
